# semantic-test

./: .gitignore  CHANGELOG.md  COVERAGE.md  PHASE2_SPEC.md  README.md  pyproject.toml  regenerate_golden.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PHASE1_ARCHITECTURE.md  SEMANTIC_TEST_ARCHITECTURE.md  USER_GUIDE.md  coverage.md
semantic_tests/: README.md  example.semantic-test.yaml
src/semantic_test/: __init__.py
src/semantic_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/semantic_test/cli/: main.py
src/semantic_test/cli/commands/: _pipeline.py  diff.py  exposure.py  scan.py  trace.py
src/semantic_test/core/analysis/: exposure.py
src/semantic_test/exporters/: __init__.py  mermaid.py
tests/fixtures/golden/: report_json_v0_1.json  report_json_v1.json  report_text_v0_1.txt  report_text_v1.txt
tests/integration/: test_cli_commands.py  test_cli_end_to_end.py  test_cli_golden_outputs.py  test_differ.py  test_full_pipeline.py  test_pbip_samples.py  test_scan_unresolved_golden.py  test_scan_ux.py  test_tmdl_reader.py  test_trace_command.py
tests/unit/: test_desktop_pipeline.py  test_dmv_schema.py  test_experimental_extractors.py  test_exposure_analysis.py  test_extractors_inventory.py  test_graph_builder.py  test_index_manager.py  test_live_report_visuals.py  test_measures_extractor.py  test_mermaid_export.py  test_model_key.py  test_object_ids.py  test_pbip_locator.py  test_report_formatters.py  test_report_visuals.py  test_scan_semantic_parity.py  test_snapshot_builder.py  test_strict_policy.py  test_tmdl_parser.py
(+46 files in other folders)
